--- a/app/views/home/thanks.html.erb
+++ b/app/views/home/thanks.html.erb
@@ -1,3 +1,17 @@
+<!--   FACEBOOK JAVASCRIPT SDK -->
+  <div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=569407923142222";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+<!--   TWITTER JAVASCRIPT -->
+  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+
 <div id="thanks">
   <h1 class="super">Thanks!</h1>
   <div class="row">
@@ -5,6 +19,13 @@
       <p>Get connected! You are now part of a vibrant, nationwide network of talented college students, and that’s seriously something to brag about. Add your Spoon title to your Facebook job description, add it to your twitter handle, and most importantly, share your articles with family and friends. How cool would it be to see your post go viral?</p>
       
       <p>Congrats, you know everything you need to know for Spoon. If you have any questions, do not hesitate at all to email Sarah (<a href="mailto:sarah@spoonuniversity.com">sarah@spoonuniversity.com</a>) or Mackenzie (<a href="mailto:mackenzie@spoonuniversity.com">mackenzie@spoonuniversity.com</a>) about anything.</p>
+
+      <h3>Now be sure to follow us on all the social medias and sign up for our content newsletter!</h3>
+
+           <div class="fb-like" data-href="https://www.facebook.com/SpoonUniversity" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
+          <a href="http://instagram.com/spoonuniversity?ref=badge" class="ig-b- ig-b-24"><img src="//badges.instagram.com/static/images/ig-badge-24.png" alt="Instagram" /></a>
+          <a href="https://twitter.com/spoonuniversity" class="twitter-follow-button" data-show-count="false" data-lang="en">Follow @spoonuniversity</a>
+
     </div>
 	</div>
 </div>
