--- a/app/views/schools/new.html.erb
+++ b/app/views/schools/new.html.erb
@@ -25,6 +25,6 @@
   <%= f.text_field :color_2 %><br />
 
 
-  <%= f.submit "Update", :class => "btn btn-primary btn"  %>
+  <%= f.submit "Create", :class => "btn btn-primary btn" %>
 
 <% end %>
