--- a/app/views/positions/editorial/_editorial_process.html.erb
+++ b/app/views/positions/editorial/_editorial_process.html.erb
@@ -7,39 +7,35 @@
 	<div class="timeline-step" id="step-1">
 <p class="label">STEP 1</p><br>
 
-A writer comes up with an amazing story idea and emails the assigned editor for approval.
+Editor-in-chief sets weekly story deadlines.
+<em>Try to publish at least one article a day, so set deadlines accordingly.</em>
 	</div>
 	<div class="timeline-step">
 <p class="label">STEP 2</p><br>
-Editor approves (or disapproves) idea, and writer immediately contacts their photographer to coordinate photos for the article.
+A writer pitches a story idea. Once it's approved by an editor, the writer immediately contacts their photographer to coordinate photos for the article.
 	</div>
 	<div class="timeline-step">
 <p class="label">STEP 3</p><br>
-
 Writer researches and writes the story and posts the story to WordPress. At the same time, the photographer uploads the photos to Flickr.
 	</div>
 	<div class="timeline-step">
 <p class="label">STEP 4</p><br>
-
-The writer takes the photos they want from Flickr and inserts them into their article. Sets featured image.
+The writer takes the photos they want from Flickr and inserts them into their article.  Pick one to be the main photo.
 	</div>
 	<div class="timeline-step">
 <p class="label">STEP 5</p><br>
-
 The writer notifies the copyeditor that the story is ready to go, and the copyeditor edits for grammar, obvious mistakes and things that just don’t make sense.
 	</div>
 	<div class="timeline-step">
 <p class="label">STEP 6</p><br>
-
-The story moves on to the managing editor or editor-in-chief. They confirm that the story will be a hit, make necessary edits, and refines the title and subtitle to be killer. If the story has major issues, it’s sent back to writer.
+The story moves on to the managing editor or editor-in-chief. They confirm that the story will be a hit, make necessary edits, and refine the title and subtitle to be killer. If the story has major issues, it’s sent back to the writer.
 	</div>
 	<div class="timeline-step">
 <p class="label">STEP 7</p><br>
-
 When the story looks good, the EIC publishes to the site and the writer promotes it on social media.
 	</div>
 </div>
 </div>
+<p class="small-caps">This process takes about a week and three days, usually.</p>
 
-
-*Throughout this process, the publishing spreadsheet will be updated.
+<p>*Throughout this process, the publishing spreadsheet will be updated.</p>
