--- a/app/views/positions/marketing/_marketing_materials.html.erb
+++ b/app/views/positions/marketing/_marketing_materials.html.erb
@@ -80,7 +80,7 @@
 			<p class="box-label">Logos</p>
 			<div class="box-inner">
 				<p>Use these logos as they appear — please don’t make any changes to them without talking to Sarah!</p>
-				<p>EPS photos can be edited in Photoshop or Illustrator and are infinitely resizeable. PNG’s are not, but they can be opened basically anywhere.</p>
+				<p>EPS files can be edited in Photoshop or Illustrator and are infinitely resizeable. PNG’s are not, but they can be opened basically anywhere.</p>
 				<div class="row">
 					<div class="col-md-5 col-md-offset-1">
 						<div class="box black-out">
