--- a/app/views/positions/photo/_photo_leadership.html.erb
+++ b/app/views/positions/photo/_photo_leadership.html.erb
@@ -1,3 +1,6 @@
+<%= render "leadership" %>
+
+
 <div class="row">
   <div class="col-sm-6 col-sm-offset-3">
     <p class="small-caps">As photo director</p> 
