--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,15 +68,16 @@
   
   <% if user_signed_in? %>
   <div id="menu" class="quicklinks">
+    <a class="list-group-item" href="/">Home</a>
     <a class="list-group-item" href="/schools/<%= current_user.school.shortname %>" style="background-color: <%= current_user.school.color_1 %>; color: <%= current_user.school.color_2 %>  "><%= current_user.school.name %></a>
     <div class="list-group">
       <a class="list-group-item" href="<%= edit_user_registration_path %>">Edit Profile</a>
-      <a class="list-group-item" href="/">Home</a>
-      <a class="list-group-item" href="/editorial/writer/chapter_spreadsheet">Publishing Spreadsheet</a>
       <a class="list-group-item" href="<%= faq_path %>">FAQ</a>
       <a class="list-group-item" href="/marketing/business-director/marketing_materials">Brand Assets</a>
+      <a class="list-group-item" href="<%= new_event_path %>">Submit Event Report</a>
       <a class="list-group-item border-top" href="<%= positions_path %>">Position Directory</a>
       <a class="list-group-item" href="/staff">Staff Directory</a>
+      <a class="list-group-item" href="/events">Event Reports</a>
       <a class="list-group-item" href="<%= schools_path %>">Social Media by School</a>
       <div class="little-space"></div>
       <%= link_to "Log out", destroy_session_path(:user), :method => :delete, :class => "list-group-item" %>
