--- a/app/views/positions/editorial/_chapter_spreadsheet.html.erb
+++ b/app/views/positions/editorial/_chapter_spreadsheet.html.erb
@@ -1,6 +1,10 @@
 <div class="row">
-	<div class="col-sm-6 col-sm-offset-3">
-		<p>You can access the spreadsheet in Google Drive <a target="_blank" href="https://docs.google.com/spreadsheet/ccc?key=0Au6DS9B6X4_RdGRVS0xZU1BGdEZPS1BRX3FxeWkzd0E#gid=2">here</a>.
-			The publishing spreadsheet will be used to keep track of the status of every article. It’s color-coded so you can see at a glance which articles have been published and which need to move forward more quickly. It’s a bit confusing, so ask Mackenzie any questions you have.</p>
+	<div class="col-sm-8 col-sm-offset-2">
+		<p>Google Docs are a great way to share materials with your team. We made a handy template of a Google spreadsheet for you right here, to help your team keep track of articles.</p>
+		<p>The publishing spreadsheet will be used to keep track of the status of every article. It’s color-coded so you can see at a glance which articles have been published and which need to move forward more quickly. It’s a bit confusing, so ask Mackenzie any questions you have.</p>
+		<p>We highly recommend that you use some version of this publishing spreadsheet. It takes some getting used to, but trust us, it's worth it.</p>
+		<p><strong>Save this spreadsheet into your own Google Drive <a target="_blank" href="https://docs.google.com/spreadsheet/ccc?key=0Au6DS9B6X4_RdGRVS0xZU1BGdEZPS1BRX3FxeWkzd0E#gid=2">here</a>.</strong></p>
+		<p class="small-caps">Here's how to make your own copy:</p>
+		<img src="/assets/copy-spreadsheet.gif">
 		</div>
 	</div>
