--- a/app/views/positions/editorial/_editorial_leadership.html.erb
+++ b/app/views/positions/editorial/_editorial_leadership.html.erb
@@ -1,22 +1,24 @@
+<%= render "leadership" %>
+<div class="little-space"></div>
 <div class="row">
-	<div class="col-sm-6 col-sm-offset-3">
-	<p class="small-caps">As editor-in-chief</p> 
-
-	<p>You’re in charge of the entire look and feel of your chapter site. Content is boring? Find examples and inspire your writers. Photos aren’t good? Tell people to fix them. Titles suck? Set up a title workshop. They’re not interning for an uptight publication, they’re talking to their friends about their lives. Above all, you’re the glue that holds the team together. Here are tips on how to maintain a cohesive group:</p>
-	<ul class="list-unstyled leadership">
-		<li><h4>SET THE BAR HIGH.</h4>
-			You set the standard. You must be the most detail-oriented, reliable, timely person on the team — everyone else will follow suit.</li>
-		<li><h4>HAVE INCREDIBLE COMMUNICATION.</h4>
-			Respond to emails quickly, get everyone’s phone numbers so you can text them in a pinch. If you’re behind, everyone is.</li>
-		<li><h4>SET DEADLINES AND STICK TO THEM.</h4>
-			Keep track of who isn’t meeting their deadlines, and follow up with them. Ask why. Let them know you’re watching.</li>
-		<li><h4>ORGANIZE BONDING EVENTS.</h4>
-			Make sure everyone knows each other and feels comfortable on the team. Host potlucks! Go out to dinner together!</li>
-		<li><h4>BE NICE, BUT BE STERN.</h4>
-			The #1 regret from our early chapters was that they didn’t set expectations from the start, and people thought Spoon was a blow off club. Make sure everyone knows Spoon is a commitment.</li>
-		<li><h4>GIVE CONSTRUCTIVE FEEDBACK.</h4>
-			Let writers know when they’ve written a great article. Let them know if you want them to take a new direction. People will appreciate your honesty.</li>
-		</ul>
+	<div class="col-sm-8 col-sm-offset-2">
+	<p>As Editor-in-Chief, the buck stops with you. Content is boring? Find examples and inspire your writers. Photos aren’t good? Tell people to fix them. Titles suck? Set up a title workshop. Above all, you’re the glue that holds the team together. Here are tips on how to maintain a cohesive group:</p>
+	<div class="row">
+		<div class="col-sm-4"><h4>SET THE BAR HIGH.</h4>
+			You set the standard. You must be the most detail-oriented, reliable, timely person on the team — everyone else will follow suit.</div>
+		<div class="col-sm-4"><h4>HAVE INCREDIBLE COMMUNICATION.</h4>
+			Respond to emails quickly, get everyone’s phone numbers so you can text them in a pinch. If you’re behind, everyone is.</div>
+		<div class="col-sm-4"><h4>SET DEADLINES AND STICK TO THEM.</h4>
+			Keep track of who isn’t meeting their deadlines, and follow up with them. Ask why. Let them know you’re watching.</div>
+		</div>
+		<div class="row">
+		<div class="col-sm-4"><h4>ORGANIZE BONDING EVENTS.</h4>
+			Make sure everyone knows each other and feels comfortable on the team. Host potlucks! Go out to dinner together!</div>
+		<div class="col-sm-4"><h4>BE NICE, BUT BE STERN.</h4>
+			The #1 regret from our early chapters was that they didn’t set expectations from the start, and people thought Spoon was a blow off club. Make sure everyone knows Spoon is a commitment.</div>
+		<div class="col-sm-4"><h4>GIVE CONSTRUCTIVE FEEDBACK.</h4>
+			Let writers know when they’ve written a great article. Let them know if you want them to take a new direction. People will appreciate your honesty.</div>
+		</div>
 	</div>
 </div>
 
