--- a/app/views/positions/editorial/_profile.html.erb
+++ b/app/views/positions/editorial/_profile.html.erb
@@ -6,27 +6,32 @@
     <p class="small-caps">PUT IT INTO PRACTICE:</p>
     <ol>
       <li>
-        From the dashboard, go to Profile > Your Profile.
+        From the dashboard, select Profile > Your Profile from the left sidebar.
       </li>
       <li>
-        Update your first and last name and change your display name to “First Last.”
+        Update your first and last name (if necessary) and change your display name to “First Last.”
       </li>
       <li>
         Write a short bio about yourself. This will show up on all of your posts. Talk about yourself in the third person.
       </li>
       <li>
-        Create a password.
+        Create a password (if necessary).
       </li>
       <li>
-        Upload an avatar (preferably a pic of yourself). This will also show up on all of your posts.
+        Upload an avatar (preferably a pic of yourself). This will show up on all of your posts.
       </li>
       <li>
-        Feel free to add whatever additional contact info you want.
+        Feel free to add whatever additional info you want.
       </li>
     </ol>
   </div>
   <div class="col-sm-7">
     <iframe src="//player.vimeo.com/video/74738920" width="100%" height="400" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-8 col-md-offset-2">
+    <img src="/assets/author-bio.png">
   </div>
 </div>
 
