--- a/app/views/positions/editorial/_update_staff.html.erb
+++ b/app/views/positions/editorial/_update_staff.html.erb
@@ -6,10 +6,10 @@
 
 <ol> 
   <li>
-    From the admin dashboard, go to Pages > All Pages.
+    From the admin dashboard, go to Pages > All Pages. <span class="small-caps"> (Note: a Page, not a post!)</span>
   </li>
   <li>
-    Click “About.”
+    Click the page called “About.”
   </li>
   <li>
     “<%= current_user.school.name %> Staff” should be the first line, formatted to Heading 3.
@@ -21,5 +21,6 @@
     Click “Update” to save changes.
   </li>
 </ol>
+
 </div>
 </div>
