--- a/app/views/positions/_leadership.html.erb
+++ b/app/views/positions/_leadership.html.erb
@@ -12,18 +12,18 @@
 		<h2>That means you have to influence a group.</h2>
 		<div class="row">
 			<div class="col-md-3 col-md-offset-3">
-				<p><span class="small-caps">Be a Role Model</span><br>‘do as I say, not what I do’ sucks</p>
+				<p><span class="label">Be a Role Model</span><br>‘do as I say, not what I do’ sucks</p>
 			</div>
 			<div class="col-md-3">
-				<p><span class="small-caps">BE CLEAR</span><br>people should know why they’re doing what they’re doing</p>
+				<p><span class="label">BE CLEAR</span><br>people should know why they’re doing what they’re doing</p>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-3 col-md-offset-3">
-				<p><span class="small-caps">Teach</span><br>it’s your job to help people gain new skills</p>
+				<p><span class="label">Teach</span><br>it’s your job to help people gain new skills</p>
 			</div>
 			<div class="col-md-3">
-				<p><span class="small-caps">MAINTAIN STRUCTURE</span><br>set expectations from the start, then stick to them</p>
+				<p><span class="label">MAINTAIN STRUCTURE</span><br>set expectations from the start, then stick to them</p>
 			</div>
 		</div>
 		<h2>The most important thing is trust.</h2>
