--- a/app/views/positions/_structure.html.erb
+++ b/app/views/positions/_structure.html.erb
@@ -1,13 +1,14 @@
 <div class="row">
-	<div class="col-md-10 col-md-offset-1">
+	<div class="col-md-8 col-md-offset-2">
 		<p>Each Spoon chapter has an <strong>editorial</strong> side that handles everything with the website and a <strong>marketing</strong> team that handles outreach and engagement.</p>
 
-		<h4>We highly recommend this structure (trust us, we’ve done this before).</h4>
+		<p>We highly recommend this structure (trust us, we’ve done this before).</p>
+		<div class="little-space"></div>
 		<div class="row">
 			<div class="col-sm-5">
 				<img src="/assets/leadership/business-structure.png">
 			</div>
-			<div class="col-sm-7 border-left">
+			<div class="col-sm-7">
 				<img src="/assets/leadership/editorial-structure.png">
 			</div>
 		</div>
