--- a/app/views/positions/editorial/_section_intro.html.erb
+++ b/app/views/positions/editorial/_section_intro.html.erb
@@ -1,6 +1,6 @@
 
 <div class="row">
 	<div class="col-sm-6 col-sm-offset-3">
-<h3>Now that you know how to create a post and insert photos, you should learn how each post type should be formatted. Check out each section’s formatting guidelines, and bookmark the pages so you can check your work later.</h3>
+<h3>Now you know how to create a post. Recipes<% if current_user.position.shortname != 'national-contributor' %> and restaurant reviews<% end %> should be formatted a little differently, though. If you're doing a round-up (a collection of multiple recipes <% if current_user.position.shortname != 'national-contributor' %> or restaurant reviews<% end %>) then these standards are flexible. But try to stick to them as much as you can, and watch for tiny details like bolding and hyphens. </h3>
 </div>
 </div>
