--- a/app/views/positions/marketing/_marketing_leadership.html.erb
+++ b/app/views/positions/marketing/_marketing_leadership.html.erb
@@ -1,29 +1,26 @@
 <%= render "leadership" %>
 
-
+<div class="little-space"></div>
 <div class="row">
-	<div class="col-sm-6 col-sm-offset-3">
-	<p class="small-caps">As business director</p> 
-
-	<p>You’re in charge of making sure shit gets done. It’s your job to organize your team so everyone feels empowered to make great things happen, and you have to consistently check in so everyone knows you care. Here are some tips on how to maintain a healthy team:</p>
-	<ul class="list-unstyled leadership">
-		<li><h4>ORGANIZE MONTHLY BONDING EVENTS.</h4>
-			Make sure everyone knows each other and feels comfortable on the team.</li>
-		<li><h4>BE CONSISTENT WITH WEEKLY MEETINGS.</h4>
-			Don’t flake out last minute and cancel meetings, and keep the meeting day and time the same each week. Take note of who doesn’t show up, and contact them to ask why.</li>
-		<li><h4>SET DEADLINES AND STICK TO THEM.</h4>
-			Keep track of who isn’t meeting their deadlines, and follow up with them. Ask why. Let them know you’re watching.</li>
-		<li><h4>HAVE INCREDIBLE COMMUNICATION.</h4>
-			Respond to emails quickly, get everyone’s phone numbers so you can text them in a pinch. You set the communication standard.</li>
-		<li><h4>SET GOALS.</h4>
-			At the beginning of the semester, set goals for that month. You want xx social media followers, 1 fundraising event, 1 launch party and 1 philanthropy event, etc. Push your team to meet those goals.</li>
-		<li><h4>BE NICE, BUT BE STERN.</h4>
-			 The #1 regret from our early chapters was that they didn’t set expectations from the start, and people thought Spoon was a blow off club. Make sure everyone knows Spoon is a commitment.</li>
-		<li><h4>DO AWESOME THINGS.</h4>
-			 Be creative, experiment, let people run with their wild ideas, and make sure everyone’s having fun.</li>
-		</ul>
+	<div class="col-sm-8 col-sm-offset-2">
+	<p>As Business Director, you’re in charge of making sure shit gets done. It’s your job to organize your team so everyone feels empowered to make great things happen, and you have to consistently check in so everyone knows you care. Here are some tips on how to maintain a healthy team:</p>
+	<div class="row">
+		<div class="col-sm-4"><h4>ORGANIZE MONTHLY BONDING EVENTS.</h4>
+			Make sure everyone knows each other and feels comfortable on the team.</div>
+		<div class="col-sm-4"><h4>BE CONSISTENT WITH WEEKLY MEETINGS.</h4>
+			Don’t flake out last minute and cancel meetings, and keep the meeting day and time the same each week. Take note of who doesn’t show up, and contact them to ask why.</div>
+		<div class="col-sm-4"><h4>SET DEADLINES AND STICK TO THEM.</h4>
+			Keep track of who isn’t meeting their deadlines, and follow up with them. Ask why. Let them know you’re watching.</div>
+		</div>
+		<div class="row">
+		<div class="col-sm-4"><h4>SET GOALS.</h4>
+			At the beginning of the semester, set goals for that month. You want xx social media followers, 1 fundraising event, 1 launch party and 1 philanthropy event, etc. Push your team to meet those goals.</div>
+		<div class="col-sm-4"><h4>HAVE INCREDIBLE COMMUNICATION.</h4>
+			Respond to emails quickly, get everyone’s phone numbers so you can text them in a pinch. You set the communication standard.</div>
+		<div class="col-sm-4"><h4>BE NICE, BUT BE STERN.</h4>
+			 The #1 regret from our early chapters was that they didn’t set expectations from the start, and people thought Spoon was a blow off club. Make sure everyone knows Spoon is a commitment.</div>
+		</div>
 	</div>
 </div>
-
 
 
