--- a/app/views/positions/skills/add_video.html.erb
+++ b/app/views/positions/skills/add_video.html.erb
@@ -24,4 +24,6 @@
     </ol>
   </div>
 </div>
+<div class="little-space"></div>
+<a class="btn btn-primary btn-lg" href="<%= skills_path %>">All Skills</a>
 
