--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -77,6 +77,7 @@
       <a class="list-group-item" href="<%= new_event_path %>">Submit Event Report</a>
       <a class="list-group-item border-top" href="<%= positions_path %>">Position Directory</a>
       <a class="list-group-item" href="/staff">Staff Directory</a>
+      <a class="list-group-item" href="<%= skills_path %>">Extra Skills</a>
       <a class="list-group-item" href="/events">Event Reports</a>
       <a class="list-group-item" href="<%= schools_path %>">Social Media by School</a>
       <div class="little-space"></div>
