--- a/app/views/positions/_meeting.html.erb
+++ b/app/views/positions/_meeting.html.erb
@@ -6,12 +6,14 @@
 		<h4>Here's how it should go.</h4>
 		<ol>
 		<div id="pre-meeting">
+			<h3>Pre-Meeting</h3>
 			<span class="small-caps ">PLAN</span>
 			<li>Set a location and time that works for the whole staff (or as many as you can get). Send out a <a target=”_blank” href=”http://doodle.com”>Doodle</a> to find the best time. Make sure everyone goes through Secret Sauce before the meeting!</li>
 			<span class="small-caps ">PREPARE</span>
 			<li>Team leaders should meet to prepare an agenda. Consider printing out tricky pages from Secret Sauce to make handouts for your staff members. Editors-in-chief need to make Wordpress accounts for everybody, the Photo Director needs to make the school Flickr account, and the Business Director should set up all social media accounts.</li>
 		</div>
 		<div id="meeting">
+			<h3>Meeting</h3>
 			<span class="small-caps ">Introduce</span>
 			<li>In the meeting, introduce the team leaders and their responsibilities.</li>
 			<span class="small-caps ">Make Friends</span>
@@ -24,6 +26,7 @@
 			<li>Finish the meeting by letting each team have time to go over specifics — recapping what you’ve done, setting a timeline for what you have to do. Photographer and Writer pairings should meet and exchange contact info. Editors-in-chief should answer questions about Wordpress, style, formatting, etc. The Business Director should take their team’s preferences for dividing into committees.</li>
 			</div>
 		<div id="post-meeting">
+			<h3>Post-Meeting</h3>
 			<span class="small-caps ">Stay Connected</span>
 			<li>Communicate with your team even when you’re not all in the same room by making a private Facebook group or using GroupMe.</li>
 		</div>
