--- a/app/views/positions/editorial/_create_post.html.erb
+++ b/app/views/positions/editorial/_create_post.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-8 col-md-offset-2">
-    <p>This is the whole shabang, you know? Be sure to pay attention to these steps carefully, because we use <strong>multiple post types</strong> to differentiate between our content.</p>
+    <p>This is our bread and butter. Be sure to pay attention to these steps carefully, because we use <strong>multiple post types</strong> to differentiate between our content.</p>
   </div>
 </div>
 <div class="row">
