--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -4,18 +4,18 @@
   <%= devise_error_messages! %>
 
   <div class="form-group">
-  <%= f.email_field :email, :autofocus => true, :placeholder => "Email"  %>
+  <%= f.email_field :email, :autocomplete => 'off', :placeholder => "Email"  %>
   </div>
 
 
   <div class="form-group">
-  <%= f.text_field :first_name, :autofocus => true, :placeholder => "First Name"  %></div>
+  <%= f.text_field :first_name, :autocomplete => 'off',:placeholder => "First Name"  %></div>
 
   <div class="form-group">
-  <%= f.text_field :last_name, :autofocus => true, :placeholder => "Last Name"   %></div>
+  <%= f.text_field :last_name, :autocomplete => 'off', :placeholder => "Last Name"   %></div>
 
   <div class="form-group">
-  <%= f.text_field :phone_number, :autofocus => true, :placeholder => "Phone Number"  %></div>
+  <%= f.text_field :phone_number, :autocomplete => 'off', :placeholder => "Phone Number"  %></div>
 
   <div class="form-group">
   <%= f.password_field :password, :placeholder => "Password"   %></div>
