--- a/app/views/positions/editorial/_best_practices.html.erb
+++ b/app/views/positions/editorial/_best_practices.html.erb
@@ -51,7 +51,7 @@
 
 
  <!-- PUT SLIDESHOW HERE          **********             -->
-
+<h2>More detail coming soon!</h2>
 
 <div class="row">
   <div class="col-md-4 col-md-offset-4">
