--- a/app/views/positions/marketing/_plan_an_event.html.erb
+++ b/app/views/positions/marketing/_plan_an_event.html.erb
@@ -13,7 +13,7 @@
 <p class="label">STEP 2</p><br>
 <h4>FOOD</h4>
 <p>If you’re trying to get free food, start early. Email, call and visit restaurants <strong>(yes, all three)</strong> to request donations for the launch event. Tell them it’ll be great for business Be relentless, and get a ton of food.</p>
-<p></strong>strong>No one wants to give you food?</strong> Suggest they set up a booth at the event and charge students $1-$5 for bites.</p>
+<p><strong>No one wants to give you food?</strong> Suggest they set up a booth at the event and charge students $1-$5 for bites.</p>
   </div>
   <div class="timeline-step">
 <p class="label">STEP 3</p><br>
