--- a/app/views/positions/editorial/_best_practices.html.erb
+++ b/app/views/positions/editorial/_best_practices.html.erb
@@ -54,14 +54,12 @@
 <h2>More detail coming soon!</h2>
 
 <div class="row">
-  <div class="col-md-4 col-md-offset-4">
+  <div class="col-md-8 col-md-offset-2">
     <h3><i class="fa fa-check-square-o"></i>   Is it the right post type?</h3>
-    <h3><i class="fa fa-check-square-o"></i>   Is there a title?</h3>
-    <h3><i class="fa fa-check-square-o"></i>   Is there a deck?</h3>
     <h3><i class="fa fa-check-square-o"></i>   Is it formatted correctly?</h3>
     <h3><i class="fa fa-check-square-o"></i>   Is it in the right category?</h3>
     <h3><i class="fa fa-check-square-o"></i>   Is it in the right subcategories?</h3>
-    <h3><i class="fa fa-check-square-o"></i>   Does it have 3-5 tags?</h3>
+    <h3><i class="fa fa-check-square-o"></i>   Does it have three to five tags?</h3>
     <h3><i class="fa fa-check-square-o"></i>   Is the SEO filled out?</h3>
     <h3><i class="fa fa-check-square-o"></i>   Is there a featured image?</h3>
   </div>
