fixed welcome confusing thing

--- a/app/views/home/welcome.html.erb
+++ b/app/views/home/welcome.html.erb
@@ -20,9 +20,14 @@
 </div>
 <script type="text/javascript">
 $(function(){
+
+
 var home = $('#continue-to-home')
 
 home.hide();
+
+$('#mc-embedded-subscribe').on('click', function(){ home.show();})
+
 })
 
 
