changed permission problem

--- a/app/views/positions/_extra_skills.html.erb
+++ b/app/views/positions/_extra_skills.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-md-8 col-md-offset-2">
-		<h4>Here's a list of a bunch of other skills that may come in handy. You don't have to go through all of these now, obviously, but remember that they're here for when you need them.</h4>
+		<h4>Here's a list of other skills that may come in handy. You don't have to go through all of these now, but remember that they're here for when you need them.</h4>
 		<div class="row skills">
 			<div class="col-md-3">
 				<a href="<%= skill_path('add_video') %>">
