--- a/app/views/positions/_meeting.html.erb
+++ b/app/views/positions/_meeting.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-md-6 col-md-offset-3">
-		<% if current_user.is_admin? %>
+		<% if current_user.is_admin?(current_user.school) %>
 		<p>Your first meeting is your one opportunity to kick off your chapter with excitement and creativity, and set the expectations for the rest of your time as <%= current_user.position.name %>.</p>
 		<% end %>
 		<h4>Here's how it should go.</h4>
