--- a/app/views/home/welcome.html.erb
+++ b/app/views/home/welcome.html.erb
@@ -1,6 +1,7 @@
 <div class="row">
 	<div class="col-md-8 col-md-offset-2">
 		<h1 class="super">Welcome to Spoon University</h1>
+        <iframe src="//player.vimeo.com/video/90148551" width="500" height="256" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 		<p>Confirm your email address by typing it right here <i class="fa fa-hand-o-down"></i> so that we can send you in-house, staff-only updates, perks and prizes. It's how we communicate with you — it's not spam.</p>
 <!-- Begin MailChimp Signup Form -->
 <div id="mc_embed_signup">
