--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,3 +1,7 @@
+<div class="row">
+  <a class="btn btn-default btn-lg" href="<%= new_event_path %>"></a>
+</div>
+
 <div class="row event-index">
 <% @events.each do |event| %>
   <div class="col-sm-4 col-md-3">
