event report button

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,6 +1,7 @@
 <div class="row">
-  <a class="btn btn-default btn-lg" href="<%= new_event_path %>"></a>
+  <a class="btn btn-primary btn-lg" href="<%= new_event_path %>">SUBMIT NEW REPORT</a>
 </div>
+<div class="little-space"></div>
 
 <div class="row event-index">
 <% @events.each do |event| %>
