--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -222,6 +222,10 @@ a.icon-circle:hover {
 	color: #888888;
 }
 
+..panel-body {
+	overflow:hidden;
+}
+
 .alum-active .panel-heading, .inactive-user .panel-heading {
 	background-color: #fdfdfd;
 	border-color: #f5f5f5;
