fixed a bug, thanks elizabeth at cal!

--- a/app/views/positions/editorial/_editorial_sections.html.erb
+++ b/app/views/positions/editorial/_editorial_sections.html.erb
@@ -16,7 +16,7 @@
 				<div class="box-inner">
 					<p>Keep it simple, take plenty of photos, and follow the formatting rules to a T.</p>
 					<p>
-						<a class="btn btn-primary" href="/editorial/<% @position.shortname %>/recipes" target="_blank">SEE MORE</a>
+						<a class="btn btn-primary" href="/editorial/<%= @position.shortname %>/recipes" target="_blank">SEE MORE</a>
 					</p>
 				</div>
 			</div>
@@ -46,7 +46,7 @@
 				<div class="box-inner">
 					<p>Write like you’re telling a friend about a restaurant. Love it, hate it, would you go back?</p>
 					<p>
-						<a class="btn btn-primary" href="/editorial/<% @position.shortname %>/restaurants" target="_blank">SEE MORE</a>
+						<a class="btn btn-primary" href="/editorial/<%= @position.shortname %>/restaurants" target="_blank">SEE MORE</a>
 					</p>
 				</div>
 			</div>
