added quiz instructions

--- a/app/views/positions/_extra_skills.html.erb
+++ b/app/views/positions/_extra_skills.html.erb
@@ -16,6 +16,13 @@
 					</div>
 				</a>
 			</div>
+			<div class="col-md-3">
+				<a href="<%= skill_path('personality_quiz') %>">
+					<div class="panel panel-default">
+						Personality Quizzes
+					</div>
+				</a>
+			</div>
 		</div>
 	</div>
 </div>
