changed styling on quiz page

--- a/app/views/positions/skills/personality_quiz.html.erb
+++ b/app/views/positions/skills/personality_quiz.html.erb
@@ -1,5 +1,6 @@
+<h1>Personality Quizzes</h1>
 
-<p>Personality quizzes like <a href="http://uiuc.spoonuniversity.com/2014/04/quiz-campus-bar/" target="_blank">this one</a> are super fun posts that are GREAT for getting more views for your site.</p>
+<h3>Personality quizzes like <a href="http://uiuc.spoonuniversity.com/2014/04/quiz-campus-bar/" target="_blank">this one</a> are super fun posts that are GREAT for getting more views for your site.</h3>
 
 <div class="row">
   <div class="col-sm-8 col-sm-offset-2">
