added mailchimp pages to skills

--- a/app/views/positions/_extra_skills.html.erb
+++ b/app/views/positions/_extra_skills.html.erb
@@ -23,6 +23,20 @@
 					</div>
 				</a>
 			</div>
+			<div class="col-md-3">
+				<a href="<%= skill_path('create_newsletters') %>">
+					<div class="panel panel-default">
+						Create Newsletters
+					</div>
+				</a>
+			</div>
+			<div class="col-md-3">
+				<a href="<%= skill_path('mailchimp_reports') %>">
+					<div class="panel panel-default">
+						View Mailchimp Reports
+					</div>
+				</a>
+			</div>
 		</div>
 	</div>
 </div>
