added headings to skills

--- a/app/views/positions/skills/add_video.html.erb
+++ b/app/views/positions/skills/add_video.html.erb
@@ -1,3 +1,4 @@
+<h1>Add Videos</h1>
 
 <p>After you upload your video to YouTube or Vimeo, you can add your video to a post on WordPress so that the featured image of the post (and the thumbnail on the homepage) will be the video itself.</p>
 
