added links to events

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -28,6 +28,10 @@
   <label>What advice do you have for other chapters?</label>
   <%= f.text_area :advice, :class => "input-large" %><br />
 </div>
+<div class="form-group">
+  <label>Include a link to a recap post with a slideshow or a Facebook album:</label>
+  <%= f.text_field :link, :class => "input-large" %><br />
+</div>
 
   <%= f.submit "Save", :class => "btn btn-primary btn" %>
 
