--- a/app/views/home/welcome.html.erb
+++ b/app/views/home/welcome.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
-	<div class="col-md-8 col-md-offset-2">
+	<div class="col-md-10 col-md-offset-1">
 		<h1 class="super">Welcome to Spoon University</h1>
-        <iframe src="//player.vimeo.com/video/90148551" width="500" height="256" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        <iframe width="560" height="315" src="//www.youtube.com/embed/ssoN__V3rl0?rel=0" frameborder="0" allowfullscreen></iframe>
 		<p>Confirm your email address by typing it right here <i class="fa fa-hand-o-down"></i> so that we can send you in-house, staff-only updates, perks and prizes. It's how we communicate with you — it's not spam.</p>
 <!-- Begin MailChimp Signup Form -->
 <div id="mc_embed_signup">
@@ -18,6 +18,7 @@
 
 	<div class="clear"><input class="btn btn-primary btn-lg" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
 </form>
+<iframe src="//player.vimeo.com/video/90148551" width="500" height="256" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 </div>
 <script type="text/javascript">
 $(function(){
@@ -48,7 +49,7 @@ if (!jqueryLoaded) {
     if (script.readyState && script.onload!==null){
         script.onreadystatechange= function () {
               if (this.readyState == 'complete') mce_preload_check();
-        }    
+        }
     }
 }
 
@@ -122,7 +123,7 @@ function mce_init_form(){
                                     		this.value = '';
 									    } else {
 									        if (/\[day\]/.test(fields[0].name)){
-    	                                        this.value = fields[1].value+'/'+fields[0].value+'/'+fields[2].value;									        
+    	                                        this.value = fields[1].value+'/'+fields[0].value+'/'+fields[2].value;
 									        } else {
     	                                        this.value = fields[0].value+'/'+fields[1].value+'/'+fields[2].value;
 	                                        }
@@ -148,12 +149,12 @@ function mce_init_form(){
                                     });
                             });
                         return mce_validator.form();
-                    }, 
+                    },
                     success: mce_success_cb
                 };
       $('#mc-embedded-subscribe-form').ajaxForm(options);
-      
-      
+
+
     });
 }
 function mce_success_cb(resp){
@@ -165,7 +166,7 @@ function mce_success_cb(resp){
         $('#mc-embedded-subscribe-form').each(function(){
             this.reset();
         $('#mc-embedded-subscribe').hide();
-        $('#continue-to-home').show();    
+        $('#continue-to-home').show();
     	});
     } else {
         var index = -1;
@@ -191,11 +192,11 @@ function mce_success_cb(resp){
         try{
             if (index== -1){
                 $('#mce-'+resp.result+'-response').show();
-                $('#mce-'+resp.result+'-response').html(msg);            
+                $('#mce-'+resp.result+'-response').html(msg);
             } else {
                 err_id = 'mce_tmp_error_msg';
                 html = '<div id="'+err_id+'" style="'+err_style+'"> '+msg+'</div>';
-                
+
                 var input_id = '#mc_embed_signup';
                 var f = $(input_id);
                 if (ftypes[index]=='address'){
